<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_reverse_sort"
        android:orderInCategory="1"
        android:title="@string/reverse_sort"/>
        android:showAsAction="never"
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="2"
        android:title="@string/new_game"/>

    <item
        android:id="@+id/add_round"
        android:orderInCategory="3"
        android:title="@string/add_round"/>

    <item
        android:id="@+id/action_show_help"
        android:orderInCategory="4"
        android:title="@string/help"/>

    <item
        android:id="@+id/action_show_about"
        android:orderInCategory="5"
        android:title="@string/about"/>
</menu>