<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_linear_layout"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/app_version_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/about_text" />


    <TextView
        android:id="@+id/app_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_version_label_text"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/about_text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:textSize="15sp"
        android:id="@+id/spacer"
        android:textStyle="italic"
        android:layout_below="@+id/app_version_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dev_by"
        android:textSize="@dimen/about_text"
        android:id="@+id/devByLabel"
        android:layout_below="@+id/spacer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/veedub_software"
        android:textSize="@dimen/about_text"
        android:id="@+id/developerName"
        android:layout_below="@+id/devByLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="italic" />

</RelativeLayout>
